[package]
name = "gbt"
version = "1.0.0"
description = "An efficient re-implementation of the getBlockTemplate algorithm in Rust"
authors = ["mononaut"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "2.0.2"
bytes = "1.4.0"
napi = { version = "2", features = ["napi8", "tokio_rt"] }
napi-derive = "2"
bytemuck = "1.13.1"
tracing = "0.1.36"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
